fix: adjust padding for dashboard on small screens

--- a/member/css/summary/summary-responsive.css
+++ b/member/css/summary/summary-responsive.css
@@ -269,7 +269,7 @@ RESPONSIVE
 
 @media (max-width: 380px) {
   .dashboard {
-    padding: 24px 12px 100px;
+    padding: 0px 12px 85px;
   }
 
   .card,
